# SqrtLM-SLAM

./: CMakeLists.txt  README.md  dev_zh_test.txt  package.xml  test.txt
Node/: fusion_slam.cpp  kittiHelper.cpp  lidar_slam.cpp
cfg/: KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml  KITTIpath.yaml  display.rviz  lidar_slam.yaml
include/: FusionSystem.h  System.h
include/BackEnd/: CeresOptimizer.h  LoopClosing.h  g2oOptimizer.h
include/FrontEnd/: Initializer.h  Tracking.h
include/algorithm/: CeresOptimizer.h  FusionSystem.h  KeyFrameDatabase.h  LocalMapping.h  LoopClosing.h  ORBextractor.h  Optimizer.h  PnPsolver.h  Sim3Solver.h  System.h  Tracking.h  g2oOptimizer.h  lidarOdom.h
include/backend/: CeresOptimizer.h  LocalMapping.h  Optimizer.h  myOptimizer.h
include/backend/mybackend/: backend.h  edge.h  edge_reprojection.h  eigen_types.h  problem.h  vertex_point_xyz.h  vertex_pose.h
include/data_structure/: Frame.h  KeyFrame.h  Map.h  MapPoint.h  ORBVocabulary.h  point_types.h
include/frontend/: ORBmatcher.h  Tracking.h
include/utils/: CircularBuffer.h  Converter.h  KalmanFilter.h  cameraFactor.h  lidarFactor.h  lidarconfig.h  math_utils.h
src/: System.cc  fusionsystem.cc
src/BackEnd/: CeresOptimizer.cc  LocalMapping.cc  LoopClosing.cc  Optimizer.cc  g2oOptimizer.cc
src/FrontEnd/: Initializer.cc  ORBextractor.cc  ORBmatcher.cc  Tracking.cc
src/algorithm/: CeresOptimizer.cc  Initializer.cc  KeyFrameDatabase.cc  LocalMapping.cc  LoopClosing.cc  ORBextractor.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  Sim3Solver.cc  System.cc  Tracking.cc  fusionsystem.cc  g2oOptimizer.cc  lidarOdom.cc
src/backend/: CeresOptimizer.cc  LocalMapping.cc  LoopClosing.cc  Optimizer.cc  g2oOptimizer.cc  myOptimizer.cc
src/backend/mybackend/: edge.cc  edge_reprojection.cc  loss_function.cc  problem.cc  vertex.cc  vertex_pose.cc
src/data_structure/: Frame.cc  KeyFrame.cc  Map.cc  MapPoint.cc
src/frontend/: Initializer.cc  ORBextractor.cc  ORBmatcher.cc  Tracking.cc
src/utils/: Converter.cc  KalmanFilter.cc  lidarconfig.cc
